// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with closed sideDrawer 1`] = `
<DocumentFragment>
  <div
    class="sideDrawer close"
  >
    <div
      class="logoSideDrawer"
    >
      <div
        class="logo"
      >
        <img
          alt="logo"
          src="test-file-stub"
        />
      </div>
    </div>
    <nav>
      <ul
        class="navigationItems"
      >
        <li
          class="navigationItem"
        >
          <a
            href="/"
          >
            HOME
          </a>
        </li>
        <li
          class="navigationItem"
        >
          <a
            href="/projects"
          >
            PROJECTS
          </a>
        </li>
        <li
          class="navigationItem"
        >
          <a
            href="/blog"
          >
            BLOG
          </a>
        </li>
      </ul>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot with opened sideDrawer 1`] = `
<DocumentFragment>
  <div
    aria-label="backdrop"
    class="backdrop"
    role="button"
    tabindex="0"
  />
  <div
    class="sideDrawer open"
  >
    <div
      class="logoSideDrawer"
    >
      <div
        class="logo"
      >
        <img
          alt="logo"
          src="test-file-stub"
        />
      </div>
    </div>
    <nav>
      <ul
        class="navigationItems"
      >
        <li
          class="navigationItem"
        >
          <a
            href="/"
          >
            HOME
          </a>
        </li>
        <li
          class="navigationItem"
        >
          <a
            href="/projects"
          >
            PROJECTS
          </a>
        </li>
        <li
          class="navigationItem"
        >
          <a
            href="/blog"
          >
            BLOG
          </a>
        </li>
      </ul>
    </nav>
  </div>
</DocumentFragment>
`;
